--- a/Keyboard_drivers/Makefile
+++ b/Keyboard_drivers/Makefile
@@ -1,7 +1,8 @@
+KBUILD_EXTRA_SYMBOLS := /home/vilhelm/foo/Module.symvers
 ifneq (${KERNELRELEASE},)
-    obj-m := USB-pendrive.o
+    obj-m := keyboard.o
 else
-    KERNEL_SOURCE := /usr/src/linux-headers-4.13.0-36-generic
+    KERNEL_SOURCE := /usr/src/linux-headers-4.13.0-37-generic
     PWD := $(shell pwd)
 default:
 	${MAKE} -C ${KERNEL_SOURCE} SUBDIRS=${PWD} modules
